<resources>
    <string name="app_name">Github User</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="search_hint">Search User</string>
    <string name="username">Username</string>
    <string name="urluser">URL</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="detailuser">Detail User</string>
    <string name="nullable">null</string>
    <string name="msgarrayfav">You dont have a favorite user</string>
    <string name="favorite">Favorite</string>
    <string name="titlefavorite">Favorite Users</string>
    <string name="addfavorite">Add to Favorite</string>
    <string name="deletefavorite">Delete from Favorite</string>
    <string name="settings">Settings</string>
    <string name="reminder">Reminder at 09:00 AM</string>
    <string name="alarmon">Reminder is ON</string>
    <string name="alarmoff">Reminder is OFF</string>
    <string name="localization">Select Language</string>
    <string name="image_splashscreen">Image SplashScreen</string>
    <string name="todo">TODO</string>
    <string name="icon">icon</string>

</resources>